update footer company title

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,7 +50,7 @@
         </div>
         <hr class="my-6 border-neutral-200 sm:mx-auto dark:border-neutral-700 lg:my-8" />
         <div class="sm:flex sm:items-center sm:justify-between">
-            <span class="text-sm text-neutral-500 sm:text-center dark:text-neutral-400">© 2022 <a href="https://flowbite.com" class="hover:underline">Menumix™</a>. All Rights Reserved.
+            <span class="text-sm text-neutral-500 sm:text-center dark:text-neutral-400">© 2025 <a href="https://truezone.io" class="hover:underline">Truezone Inc</a>. All Rights Reserved.
             </span>
             <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
                 <a href="#" class="text-neutral-500 hover:text-neutral-900 dark:hover:text-white">
