update navigation add en,tr content

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
             {{ block "main" . }}{{ end }}
         </main>
         {{ partial "footer.html" . }}
+        <script src="https://unpkg.com/lucide@latest"></script>
         <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
         <script>
             var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
