--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
-    {{ partial "landing/hero.html" . }}
-    {{ partial "landing/features.html" . }}
-    {{ partial "landing/feature1.html" . }}
-    {{ partial "landing/feature2.html" . }}
-    {{ partial "landing/pricing.html" . }}
-    {{ partial "landing/faq.html" . }}
-    {{ partial "landing/posts.html" . }}
+    {{ partial "hero.html" . }}
+    {{ partial "features.html" . }}
+    {{ partial "feature1.html" . }}
+    {{ partial "feature2.html" . }}
+    {{ partial "feature3.html" . }}
+    {{ partial "pricing.html" . }}
+    {{ partial "faq.html" . }}
+    {{ partial "posts.html" . }}
 {{ end }}
