--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,10 +2,10 @@
     <div class="mx-auto max-w-screen-xl">
         <div class="md:flex md:justify-between">
             <div class="mb-6 md:mb-0">
-                <a href="https://menumix.app" class="flex items-center dark:hidden">
+                <a href="/" class="flex items-center dark:hidden">
                     <img src="/images/logo-dark.png" class="mr-3 h-6" alt="Menumix Logo" />
                 </a>
-                <a href="https://menumix.app" class="flex items-center hidden dark:block">
+                <a href="/" class="flex items-center hidden dark:block">
                     <img src="/images/logo-light.png" class="mr-3 h-6" alt="Menumix Logo" />
                 </a>
             </div>
@@ -15,9 +15,6 @@
                     <ul class="text-neutral-600 dark:text-neutral-400">
                         <li class="mb-4">
                             <a href="https://flowbite.com" class="hover:underline">Menumix</a>
-                        </li>
-                        <li>
-                            <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
                         </li>
                     </ul>
                 </div>
