--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,14 +1,14 @@
 <section class="bg-white dark:bg-neutral-900">
     <div class="flex flex-col max-w-screen-xl px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16">
         <div class="mx-auto text-center py-8">
-            <h1 class="max-w-3xl mb-1 text-4xl font-bold tracking-tight leading-none md:text-5xl xl:text-5xl dark:text-white">Ücretsiz QR Menü oluştur</h1>
-            <h1 class="max-w-3xl mb-4 text-3xl font-bold tracking-tight leading-none md:text-4xl xl:text-4xl dark:text-white">Masalarından sipariş al</h1>
-            <p class="max-w-3xl mb-6 font-light text-neutral-500 lg:mb-8 md:text-lg lg:text-xl dark:text-neutral-400">Müşterilerinize temassız, hızlı ve modern bir sipariş deneyimi sunun. QR menü ile işletmenizi dijitalleştirin, sipariş ve restoran yönetim süreçlerinizi kolaylaştırın.</p>
+            <h1 class="max-w-3xl mb-1 text-4xl font-bold tracking-tight leading-none text-5xl dark:text-white">{{ i18n "hero_title" }}</h1>
+            <h1 class="max-w-3xl mb-4 text-3xl font-bold tracking-tight leading-none md:text-4xl xl:text-4xl text-red-600 dark:text-red-600">{{ i18n "hero_subtitle" }}</h1>
+            <p class="max-w-3xl mb-6 font-light text-neutral-500 lg:mb-8 md:text-lg lg:text-xl dark:text-neutral-400">{{ i18n "hero_description" }}</p>
             <a href="https://panel.menumix.app" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-red-600 hover:bg-red-500 focus:ring-4 focus:ring-red-300 dark:focus:ring-red-900">
-                Ücretsiz Başla
+                {{ i18n "hero_cta_button" }}
             </a>
             <a href="#features" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-neutral-900 border border-neutral-300 rounded-lg hover:bg-neutral-100 focus:ring-4 focus:ring-neutral-100 dark:text-white dark:border-neutral-700 dark:hover:bg-neutral-700 dark:focus:ring-neutral-800">
-                İncele
+                {{ i18n "hero_info_button" }}
             </a> 
         </div>
         <div class="mt-8 max-w-6xl mx-auto">
