--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -1,11 +1,11 @@
 <section class="bg-white dark:bg-neutral-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-      <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8">
-          <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-bold text-neutral-900 dark:text-white">Our Blog</h2>
-          <p class="font-light text-neutral-500 sm:text-xl dark:text-neutral-400">We use an agile approach to test assumptions and connect with the needs of your audience early and often.</p>
-      </div> 
+        <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8">
+            <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-bold text-neutral-900 dark:text-white">{{ i18n "blog_title" }}</h2>
+            <p class="mb-5 font-light text-neutral-500 sm:text-xl dark:text-neutral-400">{{ i18n "blog_description" }}</p>
+        </div> 
       <div class="grid gap-8 lg:grid-cols-3">
-        {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "posts") }}
+        {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "blog") }}
             <div class="p-6 bg-white rounded-md border border-neutral-200 dark:bg-neutral-900 dark:border-neutral-700">
                 {{ with .Resources.GetMatch "cover*" }}
                 <a>
