--- a/layouts/features/list.html
+++ b/layouts/features/list.html
@@ -2,11 +2,11 @@
 <section class="bg-white dark:bg-neutral-900">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="mx-auto max-w-screen-sm text-center lg:mb-16 mb-8">
-          <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold text-neutral-900 dark:text-white">Our Blog</h2>
-          <p class="font-light text-neutral-500 sm:text-xl dark:text-neutral-400">We use an agile approach to test assumptions and connect with the needs of your audience early and often.</p>
+          <h2 class="mb-4 text-3xl lg:text-4xl tracking-tight font-extrabold text-neutral-900 dark:text-white">{{ .Title }}</h2>
+          <p class="font-light text-neutral-500 sm:text-xl dark:text-neutral-400">{{ .Content }}</p>
       </div> 
       <div class="grid gap-8 lg:grid-cols-3">
-        {{ $paginator := .Paginate (where .Site.RegularPages "Section" "posts") }}
+        {{ $paginator := .Paginate (where .Site.RegularPages "Section" "features" ) }}
             {{ range $paginator.Pages }}
             <div class="p-6 bg-white rounded-md border border-neutral-200 dark:bg-neutral-900 dark:border-neutral-700">
                 {{ with .Resources.GetMatch "cover*" }}
