--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -1,4 +1,4 @@
-<section class="bg-white dark:bg-neutral-900" id="faq">
+<section class="bg-neutral-100 dark:bg-neutral-900" id="faq">
   <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
     <h4 class="text-1xl tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "faq_subtitle" }}</h4>
     <h2 class="mb-8 text-4xl tracking-tight font-bold text-neutral-900 dark:text-white">{{ i18n "faq_title" }}</h2>
