--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -7,7 +7,7 @@
     </div>
     <div class="flex flex-col md:flex-row max-w-3xl mx-auto gap-8">
       <!-- Pricing Card -->
-      <div class="flex flex-col p-6 mx-auto w-full text-neutral-900  rounded-lg border border-neutral-200 dark:border-neutral-600 xl:p-8 dark:bg-neutral-900 dark:text-white">
+      <div class="flex flex-col p-6 mx-auto w-full text-neutral-900 bg-neutral-50 rounded-lg xl:p-8 dark:bg-neutral-900 dark:text-white">
         <h3 class="mb-4 text-2xl font-semibold">{{ i18n "pricing_free_title" }}</h3>
         <p class="font-light text-neutral-500 sm:text-lg dark:text-neutral-400">{{ i18n "pricing_free_description" }}</p>
         <div class="flex justify-start items-baseline my-8">
@@ -43,45 +43,10 @@
             </svg>
             <span>{{ i18n "pricing_feature_4" }}</span>
           </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-neutral-500 dark:text-neutral-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-minus-icon lucide-circle-minus">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="M8 12h8"/>
-            </svg>
-            <span class="text-neutral-300">{{ i18n "pricing_feature_5" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-neutral-500 dark:text-neutral-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-minus-icon lucide-circle-minus">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="M8 12h8"/>
-            </svg>
-            <span class="text-neutral-300">{{ i18n "pricing_feature_6" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-neutral-500 dark:text-neutral-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-minus-icon lucide-circle-minus">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="M8 12h8"/>
-            </svg>
-            <span class="text-neutral-300">{{ i18n "pricing_feature_7" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-neutral-500 dark:text-neutral-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-minus-icon lucide-circle-minus">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="M8 12h8"/>
-            </svg>
-            <span class="text-neutral-300">{{ i18n "pricing_feature_8" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-neutral-500 dark:text-neutral-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-minus-icon lucide-circle-minus">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="M8 12h8"/>
-            </svg>
-            <span class="text-neutral-300">{{ i18n "pricing_feature_9" }}</span>
-          </li>
         </ul>
       </div>
-      <div class="flex flex-col p-6 mx-auto w-full text-neutral-900 bg-neutral-50 rounded-lg border border-neutral-200  dark:border-neutral-600 xl:p-8 dark:bg-neutral-900 dark:text-white">
-        <h3 class="mb-4 text-2xl font-semibold">{{ i18n "pricing_pro_title" }}</h3>
+      <div class="flex flex-col p-6 mx-auto w-full text-neutral-900 border-2 border-red-500 rounded-lg xl:p-8 dark:text-white">
+        <h3 class="mb-4 text-2xl font-semibold tet-">{{ i18n "pricing_pro_title" }}</h3>
         <p class="font-light text-neutral-500 sm:text-lg dark:text-neutral-400">{{ i18n "pricing_pro_description" }}</p>
         <div class="my-8">
           <div class="flex justify-start items-baseline-last">
@@ -92,34 +57,6 @@
         </div>
         <!-- List -->
         <ul role="list" class="mb-8 space-y-4 text-left">
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="m9 12 2 2 4-4"/>
-            </svg>
-            <span>{{ i18n "pricing_feature_1" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="m9 12 2 2 4-4"/>
-            </svg>
-            <span>{{ i18n "pricing_feature_2" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="m9 12 2 2 4-4"/>
-            </svg>
-            <span>{{ i18n "pricing_feature_3" }}</span>
-          </li>
-          <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
-              <circle cx="12" cy="12" r="10"/>
-              <path d="m9 12 2 2 4-4"/>
-            </svg>
-            <span>{{ i18n "pricing_feature_4" }}</span>
-          </li>
           <li class="flex items-start space-x-3">
             <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
