--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
     {{ partial "hero.html" . }}
+    {{ partial "highlight1.html" . }}
+    {{ partial "highlight2.html" . }}
+    {{ partial "highlight3.html" . }}
+    {{ partial "highlight4.html" . }}
     {{ partial "features.html" . }}
-    {{ partial "feature1.html" . }}
-    {{ partial "feature2.html" . }}
-    {{ partial "feature3.html" . }}
     {{ partial "pricing.html" . }}
     {{ partial "faq.html" . }}
     {{ partial "posts.html" . }}
