update content remove feature cards sections

--- a/layouts/partials/highlight3.html
+++ b/layouts/partials/highlight3.html
@@ -1,8 +1,8 @@
 <section class="bg-white dark:bg-neutral-900">
     <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
         <div class="mt-4 md:mt-0">
-            <h1 class="mb-2 text-md tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_3_subtitle" }}</h1>
-            <h2 class="mb-4 text-4xl tracking-tight font-bold text-neutral-900 dark:text-white">
+            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_3_subtitle" }}</h1>
+            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900 dark:text-white">
                 {{ i18n "highlight_3_title" }}
             </h2>
             <p class="mb-6 font-light text-neutral-500 md:text-lg dark:text-neutral-400">
