--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -3,7 +3,7 @@
         <div class="mx-auto text-center py-8">
             <h1 class="max-w-3xl mb-1 text-4xl font-bold tracking-tight leading-none md:text-5xl lg:text-5xl xl:text-6xl dark:text-white">{{ i18n "hero_title" }}</h1>
             <h1 class="max-w-3xl mb-4 text-3xl font-bold tracking-tight leading-none md:text-4xl xl:text-4xl text-red-600">{{ i18n "hero_subtitle" }}</h1>
-            <p class="max-w-3xl mb-6 font-light text-neutral-500 lg:mb-8 md:text-lg lg:text-xl dark:text-neutral-400">{{ i18n "hero_description" }}</p>
+            <p class="max-w-3xl my-6 font-light text-neutral-500 lg:mb-8 text-lg lg:text-xl dark:text-neutral-400">{{ i18n "hero_description" }}</p>
             <a href="https://panel.menumix.app" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-red-600 hover:bg-red-500 focus:ring-4 focus:ring-red-300 dark:focus:ring-red-900">
                 {{ i18n "hero_cta_button" }}
             </a>
