--- a/layouts/partials/highlight1.html
+++ b/layouts/partials/highlight1.html
@@ -1,17 +1,14 @@
 <section class="bg-white dark:bg-neutral-900">
-  <div class="gap-16 items-center py-8 px-4 mx-auto max-w-screen-xl lg:grid lg:grid-cols-2 lg:py-16 lg:px-6">
-    <div class="font-light text-neutral-500 sm:text-lg dark:text-neutral-400">
-      <h1 class="mb-2 text-md tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_1_subtitle" }}</h1>
-      <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-neutral-900 dark:text-white">
-        {{ i18n "highlight_1_title" }}
-      </h2>
-      <p class="mb-4">
-        {{ i18n "highlight_1_description" }}
-      </p>
+    <div class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6">
+        <div class="mt-4 md:mt-0">
+            <h1 class="mb-2 text-lg tracking-tight font-bold text-red-500 dark:text-red-500">{{ i18n "highlight_1_subtitle" }}</h1>
+            <h2 class="mb-4 text-5xl tracking-tight font-bold text-neutral-900 dark:text-white">
+                {{ i18n "highlight_1_title" }}
+            </h2>
+            <p class="mb-6 font-light text-neutral-500 md:text-lg dark:text-neutral-400">
+                {{ i18n "highlight_1_description" }}
+            </p>
+        </div>
+        <img class="w-full" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/cta/cta-dashboard-mockup.svg" alt="dashboard image">
     </div>
-    <div class="grid grid-cols-2 gap-4 mt-8">
-      <img class="w-full rounded-lg" src="https://images.pexels.com/photos/6816413/pexels-photo-6816413.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Mutfak sipariş ekranı">
-      <img class="mt-4 w-full lg:mt-10 rounded-lg" src="https://images.pexels.com/photos/4255393/pexels-photo-4255393.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="QR menü mobil görünüm">
-    </div>
-  </div>
 </section>
