--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,29 @@
                     <img src="/images/logo-light.png" class="mr-3 h-5" alt="Menumix Logo" />
                 </a>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 sm:gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 sm:gap-6">
+                <div>
+                    <h2 class="mb-6 text-sm font-semibold text-white uppercase">{{ i18n "menu_language" }}</h2>
+                    <div class="relative">
+                        <button onclick="toggleLangMenu()" class="flex items-center px-4 lg:px-5 py-2 lg:py-2.5 text-sm font-medium text-white hover:bg-neutral-800 rounded-lg border border-neutral-700">
+                            {{ if eq site.Language.Lang "tr" }} 🇹🇷 Türkçe {{ else }} 🇺🇸 English {{ end }}
+                            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M19 9l-7 7-7-7"/></svg>
+                        </button>
+
+                        <ul id="lang-menu" class="absolute right-0 mt-2 z-50 hidden w-40 bg-neutral-800 rounded-lg border border-neutral-700 overflow-hidden">
+                            <li>
+                            <a href="/tr/" onclick="setLang('tr')" class="block px-4 py-2 text-sm text-white hover:bg-neutral-700">
+                                🇹🇷 Türkçe
+                            </a>
+                            </li>
+                            <li>
+                            <a href="/en/" onclick="setLang('en')" class="block px-4 py-2 text-sm text-white hover:bg-neutral-700">
+                                🇺🇸 English
+                            </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div>
                     <h2 class="mb-6 text-sm font-semibold text-white uppercase">{{ i18n "menu_features" }}</h2>
                     <ul class="">
@@ -52,3 +74,16 @@
         </div>
     </div>
 </footer>
+
+<script>
+  function toggleLangMenu() {
+    const menu = document.getElementById("lang-menu");
+    menu.classList.toggle("hidden");
+  }
+
+  function setLang(lang) {
+    localStorage.setItem('preferredLanguage', lang);
+    window.location.href = '/' + lang + '/';
+  }
+
+</script>
