--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -45,59 +45,59 @@
           </li>
         </ul>
       </div>
-      <div class="flex flex-col p-6 mx-auto w-full bg-black text-neutral-900 rounded-lg xl:p-8 dark:text-white">
+      <div class="flex flex-col p-6 mx-auto w-full bg-linear-to-t from-red-600 to-red-500 text-neutral-900 rounded-lg xl:p-8">
         <h3 class="mb-4 text-2xl font-semibold text-white">{{ i18n "pricing_pro_title" }}</h3>
-        <p class="font-light text-neutral-500 sm:text-lg dark:text-neutral-400">{{ i18n "pricing_pro_description" }}</p>
+        <p class="font-light text-red-300 sm:text-lg">{{ i18n "pricing_pro_description" }}</p>
         <div class="my-8">
+          <span class="mr-2 text-2xl text-neutral-900 line-through">{{ i18n "pricing_pro_price_discount" }}</span>
           <div class="flex justify-start items-baseline-last">
-            <span class="mr-2 text-lg text-red-500 line-through">{{ i18n "pricing_pro_price_discount" }}</span>
             <span class="mr-2 text-4xl font-bold text-white">{{ i18n "pricing_pro_price" }}</span>
-            <span class="mr-2 text-xl text-neutral-500">/{{ i18n "pricing_pro_month" }}</span>
+            <span class="mr-2 text-xl text-red-300">/{{ i18n "pricing_pro_month" }}</span>
           </div>
         </div>
         <!-- List -->
         <ul role="list" class="mb-8 space-y-4 text-left">
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-neutral-400">{{ i18n "pricing_feature_5" }}</span>
+            <span class="text-red-200">{{ i18n "pricing_feature_5" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-neutral-400">{{ i18n "pricing_feature_6" }}</span>
+            <span class="text-red-200">{{ i18n "pricing_feature_6" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-neutral-400">{{ i18n "pricing_feature_7" }}</span>
+            <span class="text-red-200">{{ i18n "pricing_feature_7" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-neutral-400">{{ i18n "pricing_feature_8" }}</span>
+            <span class="text-red-200">{{ i18n "pricing_feature_8" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-neutral-400">{{ i18n "pricing_feature_9" }}</span>
+            <span class="text-red-200">{{ i18n "pricing_feature_9" }}</span>
           </li>
           <li class="flex items-start space-x-3">
-            <svg class="flex-shrink-0 w-5 h-5 text-red-500 dark:text-red-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
+            <svg class="flex-shrink-0 w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check-icon lucide-circle-check">
               <circle cx="12" cy="12" r="10"/>
               <path d="m9 12 2 2 4-4"/>
             </svg>
-            <span class="text-neutral-400">{{ i18n "pricing_feature_all" }}</span>
+            <span class="text-red-200">{{ i18n "pricing_feature_all" }}</span>
           </li>
         </ul>
       </div>
