add orders image

--- a/layouts/partials/highlight1.html
+++ b/layouts/partials/highlight1.html
@@ -9,6 +9,6 @@
                 {{ i18n "highlight_1_description" }}
             </p>
         </div>
-        <img class="w-full" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/cta/cta-dashboard-mockup.svg" alt="dashboard image">
+        <img class="w-full" src="/images/orders.png" alt="qr orders">
     </div>
 </section>
