--- a/layouts/partials/highlight3.html
+++ b/layouts/partials/highlight3.html
@@ -9,6 +9,6 @@
                 {{ i18n "highlight_3_description" }}
             </p>
         </div>
-        <img class="w-full" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/cta/cta-dashboard-mockup.svg" alt="dashboard image">
+        <img class="w-full" src="/images/reports.png" alt="qr sales reports">
     </div>
 </section>
